# renderer

./: .gitignore  CMakeLists.txt  Model.h  README.md  main  main.cpp  normal.tga  output.tga  zbuffer.tga
